--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -35,7 +35,7 @@ header:
     show_search: true
     show_theme_chooser: true
     logo:
-      text: "Your Name"
+      text: "Moazzam Umer"
 
 # Site footer
 footer:
@@ -58,3 +58,4 @@ features:
     enable: false
   privacy_pack:
     enable: false
+    sharing: false 
